Event handling strategy, command representation
A new strategy how to handle events has been established. It should
work well with CONTROL and ALT key combinations and with usage of
input modes to input special unicode caracters not found on the
keyboard.

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -100,7 +100,7 @@
 <h1>Gemse 1</h1>
 
 <form>
-    <input id="input" onkeypress="processKey(event)" oninput="processInput()"></input>
+    <textarea id="input" onkeypress="processKey(event)" oninput="processInput()"/>
 </form>
 
 <div id="equationEnv">
