Focus from the beginning

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -78,6 +78,7 @@
             editor = new GemsePEditor();
             editor.attach(document.getElementById("equationEnv"));
             editor.inputElement = document.getElementById("input");
+            editor.inputElement.focus();
         }
 
         /* Event processing */
