Various, standard keyboard event handler
Various changes. Main improvement: Standard keyboard event handler for
modes similar to edit mode, for example attribute mode.

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -17,6 +17,9 @@
             color: #000;
             -moz-border-radius: 3px;
         }
+        table {
+            border-collapse: collapse;
+        }
         *[internal|selected="editcursor"] { color: red; background-color: yellow; }
         *[internal|selected="attributeCursor"] { color: white; background-color: black; }
         *[internal|selected="parent"] { background-color: #ddd; }
