--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -146,6 +146,7 @@
 
     </div>
     <div internal:function="modeName"></div>
+    <pre internal:function="notificationDisplay"></pre>
 </div>
 
 </body>
