--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -22,5 +22,10 @@ able to edit equations as fast as possible.</p>
 the webbrowser Firefox 3. It perhaps also runs in other browsers.
 There is no release ready up to now.</p>
 
+<p>The project makes progress (as of January 2009). However, the most
+important parts, the handling of the different command types and the
+comands itself in edit mode as well as the entire insert mode are
+still missing.</p>
+
 </body>
 </html>
