Name for window, load from document object

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -104,6 +104,9 @@
             // Detach containerTemplate from document:
             editor.containerTemplate.parentNode.removeChild(editor.containerTemplate);
             editor.containerTemplate.removeAttribute("id");
+
+            // Give the window a name:
+            window.name = "globalGemseInstance";
         }
 
         /* Event processing */
