Greatly improved insert mode

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -90,6 +90,7 @@
         }
     ]]></style>
     <script src="gemseBase.js"/>
+    <script src="elementDescriptors.js"/>
     <script src="editMode.js"/>
     <script src="attributeMode.js"/>
     <script src="trivialInsertMode.js"/>
