Added visual mode
Added a mode for visual selection. It can not yet run commands, since
the command handling in the edit mode is not yet complete.

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -16,6 +16,7 @@
     <script src="editMode.js"/>
     <script src="attributeMode.js"/>
     <script src="trivialInsertMode.js"/>
+    <script src="visualSelectionMode.js"/>
     <!-- <script src="elementDescriptors.js"/> -->
     <script><![CDATA[
         var editor;
