Working towards new command handling
The command handling in the edit mode now should also work if a
string of concatenated commands are inserted at once.

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -108,6 +108,7 @@
 <div internal:function="container" id="containerTemplate">
     <div internal:function="equation">
         <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
+            <mrow></mrow>
         </math>
     </div>
     <div internal:function="treeView">
