--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -4,7 +4,7 @@
 
 <html
     xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:internal="http://www.andonyar.com/math/editor"
+    xmlns:internal="http://www.andonyar.com/rec/2008-12/gemse/internalns"
     xml:lang="de"
 >
 
