Updated Website (partially)

--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -11,6 +11,9 @@
 
 <h1>Gemse, the General Math Structure Editor</h1>
 
+<p><strong><a href="approach1">Gemse 1.0.0</a> has been
+published!</strong></p>
+
 <p>The project Gemse has been started in the need for an editor
 for mathematical formulas that is fast and can be controled by
 keyboard only.</p>
