--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -19,13 +19,23 @@ interface is highly inspired by the text editor vi. The goal is to be
 able to edit equations as fast as possible.</p>
 
 <p>Gemse Approach 1 is implemented in JavaScript using DOM. It runs in
-the webbrowser Firefox 3. It perhaps also runs in other browsers.
-There is no release ready up to now.</p>
+the webbrowser Firefox 3.</p>
 
-<p>The project makes progress (as of January 2009). However, the most
-important parts, the handling of the different command types and the
-comands itself in edit mode as well as the entire insert mode are
-still missing.</p>
+<p>The project has continued faster than expected. You can already try
+version 1.0.0. But be aware, that this version does not yet contain
+all features and may contain many bugs. It is not a production releas,
+its intention is only to get feedback from potential users.</p>
+
+<ul>
+<li>If you are using Firefox 3, <a href="demo/editor.xhtml">try the
+demo</a>.</li>
+<li>Read the <a href="demo/doc/">Documentation</a></li>
+<li>Download <a href="gemse-1-0-0.zip">Gemse as zip file</a></li>
+</ul>
+
+<p>And the licence? I am not yet shure which licenses I am going to
+use. However, I am shure that Gemse will be available under multiple
+licences. GPL version 2 and 3 will definitely be an option.</p>
 
 </body>
 </html>
