Added overlay for browser: edit formulas via popup
An overlay for the browser has been added. For this, a gemse.manifest
file is now included in the repository. A user can now rightclick on
a math element and choose "edit in Gemse". Actually, if he clicks a
descendant of a MathML element, the math element gets opened in a
new Gemse editor. If he clicks an element that is an ancestor of one
or several math elements, all of them get opened in a new Gemse
editor. If the user has made a selection, all selected or partially
selected nodes are opened.
Have fun with this powerful feature!

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -34,6 +34,13 @@
 
             // Give the window a name:
             window.name = "globalGemseInstance";
+
+            // Load MathML elements provided by arguments
+            if (window.arguments && window.arguments.length > 0) {
+                window.arguments[0].forEach(function (m) {
+                    editor.loadFromOpenDocument(m.doc, m.element);
+                });
+            }
         }
 
         /* Event processing */
