--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -23,14 +23,14 @@ the webbrowser Firefox 3.</p>
 
 <p>The project has continued faster than expected. You can already try
 version 1.0.0. But be aware, that this version does not yet contain
-all features and may contain many bugs. It is not a production releas,
+all features and may contain many bugs. It is not a production release,
 its intention is only to get feedback from potential users.</p>
 
 <ul>
 <li>If you are using Firefox 3, <a href="demo/editor.xhtml">try the
 demo</a>.</li>
 <li>Read the <a href="demo/doc/">Documentation</a></li>
-<li>Download <a href="gemse-1-0-0.zip">Gemse as zip file</a></li>
+<li>Download <a href="releases/gemse-1-0-0.zip">Gemse as zip file</a></li>
 </ul>
 
 <p>And the licence? I am not yet shure which licenses I am going to
