Missing note in index of website

--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -20,7 +20,10 @@ keyboard only.</p>
 
 <p>Actually, the first approach to this problem,
 "<a href="approach1">Gemse Approach 1</a>",
-is an editor for MathML. It is currently in development.</p>
+is an editor for Presentation MathML. (This means that you can
+edit how a formula looks. It does not capture the meaning, so no
+Content MathML over here.)
+It is currently in development.</p>
 
 <p>If you are looking for an editor that catches the semantics of
 a formula, you should consider 
