Separated command tables and constants from rest
This is in order to ease configuration for the user. Unfortunately, if
one wants to load the command tables, one has to previously load the
mode itself. This is because the functions that are referenced in the
tables have to exist. This is a drawback for the automatic
documentation generation system.

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -11,12 +11,17 @@
 <head>
     <title>Gemse 1</title>
     <link rel="stylesheet" href="gemse.css" type="text/css" />
+    <script src="const.js"/>
     <script src="gemseBase.js"/>
     <script src="elementDescriptors.js"/>
     <script src="editMode.js"/>
+    <script src="editMode_commandTable.js"/>
     <script src="attributeMode.js"/>
+    <script src="attributeMode_commandTable.js"/>
     <script src="trivialInsertMode.js"/>
+    <script src="trivialInsertMode_commandTable.js"/>
     <script src="visualSelectionMode.js"/>
+    <script src="visualSelectionMode_commandTable.js"/>
     <!-- <script src="elementDescriptors.js"/> -->
     <script><![CDATA[
         var editor;
