--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -22,7 +22,7 @@
     <script src="trivialInsertMode_commandTable.js"/>
     <script src="visualSelectionMode.js"/>
     <script src="visualSelectionMode_commandTable.js"/>
-    <!-- <script src="elementDescriptors.js"/> -->
+    <script src="inputSubstitutionTable.js"/>
     <script><![CDATA[
         var editor;
 
