--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -22,6 +22,7 @@
     <script src="trivialInsertMode_commandTable.js"/>
     <script src="visualSelectionMode.js"/>
     <script src="visualSelectionMode_commandTable.js"/>
+    <script src="defaultOptions.js"/>
     <!-- <script src="elementDescriptors.js"/> -->
     <script><![CDATA[
         var editor;
