--- a/approach1/operatorDictionaryTest.xhtml
+++ b/approach1/operatorDictionaryTest.xhtml
@@ -11,9 +11,11 @@
         function test() {
             loadOperatorDictionary()
             var target = document.getElementById("target");
+            var operatorCount = 0;
             for (c in operatorDictionary) {
             for (f in operatorDictionary[c]) {
             for (k in operatorDictionary[c][f]) {
+                ++operatorCount;
                 var tr = document.createElement("tr");
                 var td1 = document.createElement("td");
                 td1.appendChild(document.createTextNode(c));
@@ -41,9 +43,14 @@
                 var td6 = document.createElement("td");
                 td6.appendChild(document.createTextNode(operatorDictionary[c][f][k].comment));
                 tr.appendChild(td6);
+                var td7 = document.createElement("td");
+                td7.appendChild(document.createTextNode(operatorDictionary[c][f][k].groupingPrecedence));
+                tr.appendChild(td7);
 
                 target.appendChild(tr);
             }}}
+
+            document.getElementById("count").appendChild(document.createTextNode(operatorCount));
         }
     ]]></script>
 </head>
@@ -55,11 +62,15 @@
 <table>
 <caption>Operator dictionary</caption>
 <thead>
-    <tr><th colspan="3">indexing</th><th>contentComment</th><th>attributes</th><th>comment</th></tr>
+    <tr><th colspan="3">indexing</th><th>contentComment</th><th>attributes</th><th>comment</th><th>Grouping</th></tr>
     <tr><th>content</th><th>form</th><th>key</th><th></th><th></th><th></th></tr>
 </thead>
 <tbody id="target">
 </tbody>
+
+<p>Loaded <span id="count"/> operators.</p>
+
+<pre id="hints"></pre>
 </table>
 
 </body>
