Put author's email address on website
So users know right away how to call me.

--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -30,5 +30,7 @@ a formula, you should consider
 <a href="http://www.matracas.net/sentido/index.html">Sentido</a>.
 Also take a look at <a href="http://wme.cs.kent.edu/mathedit/">MathEdit</a>.</p>
 
+<address>Author: <a href="mailto:urs@andonyar.com">Urs Holzer</a></address>
+
 </body>
 </html>
