--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -38,5 +38,7 @@ demo</a>.</li>
 use. However, I am shure that Gemse will be available under multiple
 licences. GPL version 2 and 3 will definitely be an option.</p>
 
+<address>Author: <a href="mailto:urs@andonyar.com">Urs Holzer</a></address>
+
 </body>
 </html>
