More beautiful test page for operator dicitonary

--- a/approach1/operatorDictionaryTest.xhtml
+++ b/approach1/operatorDictionaryTest.xhtml
@@ -63,6 +63,7 @@
     <style>
         tr.user { background-color: #fdd }
         table, tr, td, th { border: 1px solid gray }
+        td:first-child { font-size: x-large; text-align: center }
     </style>
 </head>
 
