Added dictionary view

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -113,6 +113,9 @@
     <div internal:function="attributeView">
 
     </div>
+    <div internal:function="dictionaryView">
+
+    </div>
     <div internal:function="modeName"></div>
     <pre internal:function="notificationDisplay"></pre>
 </div>
@@ -129,6 +132,9 @@
 
     </div>
     <div internal:function="attributeView">
+
+    </div>
+    <div internal:function="dictionaryView">
 
     </div>
     <div internal:function="modeName"></div>
