Include files for ucdInsert mode and the UCD

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -14,12 +14,15 @@
     <script src="const.js"/>
     <script src="gemseBase.js"/>
     <script src="elementDescriptors.js"/>
+    <script src="ucd.js"/>
     <script src="editMode.js"/>
     <script src="editMode_commandTable.js"/>
     <script src="attributeMode.js"/>
     <script src="attributeMode_commandTable.js"/>
     <script src="trivialInsertMode.js"/>
     <script src="trivialInsertMode_commandTable.js"/>
+    <script src="ucdInsertMode.js"/>
+    <script src="ucdInsertMode_commandTable.js"/>
     <script src="visualSelectionMode.js"/>
     <script src="visualSelectionMode_commandTable.js"/>
     <script src="operatorDictionary.js"/>
