--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -38,6 +38,9 @@ demo</a>.</li>
 use. However, I am shure that Gemse will be available under multiple
 licences. GPL version 2 and 3 will definitely be an option.</p>
 
+<p>A list of relevant literature you can find on 
+<a href="./">Gemse's main page</a>.</p>
+
 <address>Author: <a href="mailto:urs@andonyar.com">Urs Holzer</a></address>
 
 </body>
