--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -11,12 +11,15 @@
 
 <h1>Gemse, the General Math Structure Editor</h1>
 
+
 <p><strong><a href="approach1">Gemse 1.0.2</a> has been
 published!</strong></p>
 
 <p>The project Gemse has been started in the need for an editor
-for mathematical formulas that is fast and can be controled by
+for mathematical formulas that is fast and can be controlled by
 keyboard only.</p>
+
+<h2><a href="approach1">Approach 1</a></h2>
 
 <p>Actually, the first approach to this problem,
 "<a href="approach1">Gemse Approach 1</a>",
@@ -25,10 +28,23 @@ edit how a formula looks. It does not capture the meaning, so no
 Content MathML over here.)
 It is currently in development.</p>
 
+<h2>Other solutions</h2>
+
 <p>If you are looking for an editor that catches the semantics of
 a formula, you should consider 
 <a href="http://www.matracas.net/sentido/index.html">Sentido</a>.
 Also take a look at <a href="http://wme.cs.kent.edu/mathedit/">MathEdit</a>.</p>
+
+<h2>Literature</h2>
+
+<ul>
+<li>Unicode Technical Note #28: 
+    <a href="http://www.unicode.org/notes/tn28/">Unicode Nearly Plain-Text Encoding of Mathematicsa</a></li>
+<li>Unicode Technical Report #25:
+    <a href="http://www.unicode.org/reports/tr25/">Unicode Support for Mathematics</a></li>
+</ul>
+
+<h2>Contact</h2>
 
 <address>Author: <a href="mailto:urs@andonyar.com">Urs Holzer</a></address>
 
