Load UString.js in editor

--- a/approach1/editor.xhtml
+++ b/approach1/editor.xhtml
@@ -12,6 +12,7 @@
     <title>Gemse 1</title>
     <link rel="stylesheet" href="gemse.css" type="text/css" />
     <script src="const.js"/>
+    <script src="UString.js"/>
     <script src="gemseBase.js"/>
     <script src="elementDescriptors.js"/>
     <script src="ucd.js"/>
